# gimp-creatures-sprites

./: AUTHORS  ChangeLog  Install_win32.txt  Makefile.am  Makefile.g95  Makefile.in  README  README.md  README_USAGE  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  makeinc.g95  mkinstalldirs  shave.m4
debian/: Makefile.am  changelog  control  copyright  creatures-sprites.doc-base  docs  files  postinst.debhelper  postinst.ex  postrm.ex  preinst.ex  prerm.debhelper  prerm.ex  rules  substvars
help/: Makefile.am
help/C/: Makefile.am  Makefile.in  creatures-sprites.html  index.html
help/images/: Makefile.am  Makefile.in
po/: ChangeLog  POTFILES  POTFILES.in  creatures-sprites.pot  de.gmo  de.po  update.sh
src/: Makefile.am  Makefile.g95  Makefile.in  blkimage.c  c16image.c  main.c  main.h  plugin-intl.h  s16image.c
src/.deps/: blkimage.Po  c16image.Po  s16image.Po
